# LightWebSocketClient

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
examples/: CMakeLists.txt  first.cpp
include/: WebSocketClient.h
src/: WebSocketClient.cpp
